--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
         <h4>Helpline:8050636777</h4>
         <nav>
             <ul>
-                <li><img src="C:\Users\Mokshitha\OneDrive\Documents\Html\images\Group 46.png" /></li>
+                <li><img src="C:\Users\Mokshitha\Downloads\images\Group 46.png" /></li>
                 <li>Home</li>
                 <li>About Us</li>
                 <li>Health Support Program </li>
